# notedown

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: constants.h  mainwindow.h  mainwindow.hpp  mainwindow.ui
src/: main.cpp  mainwindow.cpp
